<resources>
    <string name="app_name">CloudyCloud</string>
    <string name="albums_name">Albums</string>
    <string name="group_status_status">Group Information</string>
    <string name="group_status_name">Name</string>
    <string name="group_status_expiration">Expiration</string>
    <string name="group_status_members">Members</string>
    <string name="group_status_add">ADD</string>
    <string name="scan_to_join">Scan to join!</string>
    <string name="leave_button">Leave</string>
    <string name="sort_button">Sort</string>
    <string name="text_new_group">NEW GROUP</string>
    <string name="text_group_name">Group name:</string>
    <string name="text_group_duration">Group duration:</string>
    <string name="text_minutes">minutes</string>
    <string name="button_create">CREATE</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in CloudyCloud PhotoAlbum now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_logout">Log out</string>
    <string name="btn_read_qr">Join a group</string>
    <string name="text_qr_code_info">Nothing to read.</string>
    <string name="description_join_group_qr">Qr for joining group</string>
    <string name="group_status_expired_text">(Expired)</string>
</resources>
