<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.mcc_2017_g19.GroupCreationActivity">

    <TextView
        android:id="@+id/labelNewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/text_new_group"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNewGroup">

        <TextView
            android:id="@+id/labelGroupName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/fieldGroupName"
            android:maxLines="1"
            android:text="@string/text_group_name"

            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/fieldGroupName"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/labelGroupDuration"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/fieldGroupDuration"
            android:maxLines="1"
            android:text="@string/text_group_duration"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/fieldGroupDuration"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="8dp" />

        <TextView
            android:id="@+id/labelMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:maxLines="1"
            android:text="@string/text_minutes"
            android:textAlignment="textEnd"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
            android:textColor="?attr/colorControlNormal" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonCreateGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_create"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</android.support.constraint.ConstraintLayout>
